Added trainer categories